back to top button fixed and footer aligned

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,7 +3,9 @@ body{
     background: rgb(251, 240, 201);
     border: 20px solid rgb(37, 101, 123);
     border-radius: 10px;
-    padding: 5%
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 5%;
 }
 
 .header {
@@ -125,28 +127,15 @@ form section textarea {
     width: 3em;
 }
 
-.back-to-top-link {
-    display: inline-block;
-    text-decoration: none;
-    /* width: 5%;
-    height: 5%; */
-    padding: 10%;
-}
-
-/* footer {
-    display: flex;
-    justify-content: flex-start;
-} */
-
 .footer-row {
     display: flex;
     justify-content: flex-start;
 }
 
 .footer-icons {
-    padding-right: 10px;
-    /* max-width: 33%; */
+    padding-left: 10px;
     height: auto;
+    width: 70%;
 }
 
 .footer-copy {
@@ -154,15 +143,23 @@ form section textarea {
     width: 100%;
 }
 
-@media screen and (min-width: 800px) {
+.back-to-top-link {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 100;
+
+@media screen and (min-width: 600px) {
     .header a {
         float: left;
         text-align: center;
         display: inline;
     }
+
     .header-center {
         justify-content: center;
     }
+
     .nav-items {
         border:royalblue;
     }
@@ -170,6 +167,7 @@ form section textarea {
     form {
         width: 50%;
     }
+
     h1 {
         font-size: 300%;
         color:rgb(21, 42, 89);
@@ -188,5 +186,10 @@ form section textarea {
     p {
         font-size: 150%;
         color:rgb(14, 33, 67);
+    }
+
+    .footer-icons {
+        height: auto;
+        width: 100%;
     }
 }
